# aetherlab-community

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  create_sdk.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml  testpypi.yml
docs/: index.md
docs/api-reference/: python-sdk.md
docs/best-practices/: security.md
docs/getting-started/: quickstart 2.md  quickstart.md
docs/tutorials/: chatbot-integration.md
examples/: AetherLab_SDK_End_to_End.ipynb  README.md  batch_media_async.py  batch_prompt.py  batch_prompt_jsonl.py  check_media.py  check_prompt.py  check_prompt_async.py  error_handling.py
examples/python/: aetherlab_enterprise_value_demo.py  aetherlab_financial_services_example.py  aetherlab_streaming_service_example.py  client_quickstart.md  guardrails_demo.py  minimal_value_example.py  simple_example.py
sdks/python/: README.md  pyproject.toml  setup.py  test_e2e_real.py  test_real_api.py  test_real_api_v2.py
sdks/python/aetherlab/: __init__.py  client.py
src/aetherlab/: __init__.py  _batch.py  _http.py  _version.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_async_batch_client.py  test_async_client.py  test_batch_client.py  test_batch_models.py  test_client.py  test_helpers.py  test_live_smoke.py
