[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aetherlab"
version = "0.4.0"
description = "Official Python SDK for the AetherLab Guardrails API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "AetherLab", email = "support@aetherlab.co" },
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24,<1",
]
keywords = [
    "aetherlab",
    "ai",
    "guardrails",
    "compliance",
    "safety",
    "llm",
    "content-moderation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://aetherlab.co"
Documentation = "https://github.com/AetherLabCo/aetherlab-community#readme"
Repository = "https://github.com/AetherLabCo/aetherlab-community"
Issues = "https://github.com/AetherLabCo/aetherlab-community/issues"
Changelog = "https://github.com/AetherLabCo/aetherlab-community/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.8",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aetherlab"]

[tool.hatch.build.targets.sdist]
include = [
    "src/aetherlab",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
files = ["src/aetherlab"]
